correct bamazon img

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         </div><!--projectInfo-->
                         <div class = "projectImage six columns">
                             <div class = "projectImageWrap">
-                                <img class = "gallery" src = "img/bamazon.png" value = "img/bamazon.png">
+                                <img class = "gallery" src = "img/Bamazon.png" value = "img/Bamazon.png">
                             </div>
                             <div class = "galleryChoiceWrap">
                                 <div class = "galleryAnchorWrap">
