added pig rescue

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div id = "intro" class = "container">
                     <div id = "introWrap">
                         <h1 id = "introName">Ravi Savajiyani</h1>
-                        <h3 id = "introInfo">Full Stack Developer</h3>
+                        <h3 id = "introInfo">Full Stack Web Developer</h3>
 
                         <a target = "_blank" class = "introAnchor" href = "https://github.com/rsavajiyani"><i title = "GitHub" class = "fa fa-github main_icon"></i></a>
                         <a target="_blank" class="introAnchor" href="https://www.linkedin.com/in/rsavajiyani/"><i title="LinkedIn" class="fa fa-linkedin-square"></i></a>
@@ -34,6 +34,48 @@
                 </div><!--intro-->
            <div id = "projectWrapper">
                 <h1 class = "projectTitle">Projects</h1>
+                <div class="project container">
+                    <div class="row">
+                        <div class="projectInfo six columns">
+                            <h2 class="projectHeader">Arizona Pig Rescue</h2>
+                            <h5 class="projectTags">Full-CRUD Web Application</h5>
+                            <h5 class="projectTech"> Express.js, Node.js, MySQL, Sequelize, Handlebars, Bootstrap, HTML5, CSS3</h5>
+                            <p class="projectTextParagraph">
+                                Arizona Pig Rescue is a re-design of the Ironwood Pig Sanctuary website(www.ironwoodpigs.org). After learning about the "mini-pig" myth and the problems it has created, I did some research and found the amazing folks at the sanctuary, and I decided to rebuild their website.
+                            </p>
+                            <p class="projectTextParagraph">
+                                I added database functionality using MySQL and Sequelize, implementing an Administrator Dashboard that allopws the sanctuary owners to keep track of the pigs they have on their roster. They can add new pigs, update the adoption status of any pig they have, or remove individual pigs from their database. The dashboard also allows them to track individuals who have expressed interest in either volunteering or adpoting a pig from their farm.
+                            </p>
+                            <p class="projectTextParagraph">
+                                I used the Handlebars.js templating engine to render the results from the Sequelize queries to the front-end. The front-end was styled by my teammates using Bootstrap. 
+                            </p>
+                            <p class="projectTextParagraph">
+                                I'm still working on adding functionality to the website, and plan on donating it to the Ironwood Pig Sanctuary in hopes of supporting the wonderful work they do! Please check out the website demo(administrator password: 'pigministrator').
+                            </p>
+                        </div>
+                        <!--projectInfo-->
+                        <div class="projectImage six columns">
+                            <div class="projectImageWrap">
+                                <img class="gallery" src="img/Pig.png" value="img/Pig.png">
+                            </div>
+                            <div class="galleryChoiceWrap">
+                                <div class="galleryAnchorWrap">
+                                    <a target="_blank" href="https://github.com/rsavajiyani/Pig-Sanctuary">
+                                        <button class="galleryAnchorButton">GitHub</button>
+                                    </a>
+                                    <a target="_blank" href="https://secure-refuge-93657.herokuapp.com">
+                                        <button class="galleryAnchorButton">Demo</button>
+                                    </a>
+                
+                                </div>
+                            </div>
+                        </div>
+                        <!--projectImage-->
+                    </div>
+                    <!--row-->
+                </div>
+                <!--project-->
+
                 <div class = "project container">
                     <div class = "row">
                         <div class = "projectInfo six columns">
@@ -93,7 +135,7 @@
                         <div class = "projectInfo six columns">
                             <h2 class = "projectHeader">Out And About</h2>
                             <h5 class = "projectTags">Web Application</h5>
-                            <h5 class = "projectTech">ReactJS, NodeJS, Google Maps API, Google Places API, OpenWeather API, Bootstrap, HTML5, CSS3</h5>
+                            <h5 class = "projectTech">Node.js, Google Maps API, Google Places API, OpenWeather API, Bootstrap, HTML5, CSS3</h5>
                             <p class = "projectTextParagraph">
                                  Out and About is a web application that provides the user a map of local bars in a zip code they search. It also provides a snapshot of current weather conditions in that area, using the OpenWeather API.
                             </p>
