updated resume link

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
                         <a target = "_blank" class = "introAnchor" href = "https://github.com/rsavajiyani"><i title = "GitHub" class = "fa fa-github main_icon"></i></a>
                         <a target="_blank" class="introAnchor" href="https://www.linkedin.com/in/rsavajiyani/"><i title="LinkedIn" class="fa fa-linkedin-square"></i></a>
-                        <a target="_blank" class="introAnchor" href="https://drive.google.com/file/d/1Hd5RSuY0JBWVymrpBeyeFyDPJ-SZKpsR/view?usp=sharing"><i title="Resume" class="fa fa-file-o"></i></a>
+                        <a target="_blank" class="introAnchor" href="https://docs.google.com/document/d/1ycrzJnVMiDwQldcQyCWfwtbGAX9ZLrThZllu56x6pKc/edit?usp=sharing"><i title="Resume" class="fa fa-file-o"></i></a>
                         
                         <br>
                         <i id = "introDownArrow" class = "fa fa-arrow-circle-down" title = "Projects"></i>
@@ -41,10 +41,10 @@
                             <h5 class="projectTags">Full-CRUD Web Application</h5>
                             <h5 class="projectTech"> Express.js, Node.js, MySQL, Sequelize, Handlebars, Bootstrap, HTML5, CSS3</h5>
                             <p class="projectTextParagraph">
-                                Arizona Pig Rescue is a re-design of the Ironwood Pig Sanctuary website(www.ironwoodpigs.org). After learning about the "mini-pig" myth and the problems it has created, I did some research and found the amazing folks at the sanctuary, and I decided to rebuild their website.
+                                Arizona Pig Rescue is a re-design of the Ironwood Pig Sanctuary <a href= "www.ironwoodpigs.org">website</a>. After learning about the "mini-pig" myth and the problems it has created, I did some research and found the amazing folks at the sanctuary, and I decided to rebuild their website.
                             </p>
                             <p class="projectTextParagraph">
-                                I added database functionality using MySQL and Sequelize, implementing an Administrator Dashboard that allopws the sanctuary owners to keep track of the pigs they have on their roster. They can add new pigs, update the adoption status of any pig they have, or remove individual pigs from their database. The dashboard also allows them to track individuals who have expressed interest in either volunteering or adpoting a pig from their farm.
+                                I added database functionality using MySQL and Sequelize, implementing an Administrator Dashboard that allows the sanctuary owners to keep track of the pigs they have on their roster. They can add new pigs, update the adoption status of any pig they have, or remove individual pigs from their database. The dashboard also allows them to track individuals who have expressed interest in either volunteering or adpoting a pig from their farm.
                             </p>
                             <p class="projectTextParagraph">
                                 I used the Handlebars.js templating engine to render the results from the Sequelize queries to the front-end. The front-end was styled by my teammates using Bootstrap. 
