--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <h5 class="projectTags">Full-CRUD Web Application</h5>
                             <h5 class="projectTech"> Express.js, Node.js, MySQL, Sequelize, Handlebars, Bootstrap, HTML5, CSS3</h5>
                             <p class="projectTextParagraph">
-                                Arizona Pig Rescue is a re-design of the Ironwood Pig Sanctuary <a href= "http://www.ironwoodpigs.org" target=newtab>website</a>. After learning about the "mini-pig" myth and the problems it has created, I did some research and found the amazing folks at the sanctuary, and I decided to rebuild their website.
+                                Arizona Pig Rescue is a re-design of the Ironwood Pig Sanctuary <a href= "http://www.ironwoodpigs.org" target=newtab>website</a>. After learning about the "mini-pig" myth and the problems it has created, my team did some research and found the amazing folks at the sanctuary, and we decided to rebuild their website.
                             </p>
                             <p class="projectTextParagraph">
                                 I added database functionality using MySQL and Sequelize, implementing an Administrator Dashboard that allows the sanctuary owners to keep track of the pigs they have on their roster. They can add new pigs, update the adoption status of any pig they have, or remove individual pigs from their database. The dashboard also allows them to track individuals who have expressed interest in either volunteering or adpoting a pig from their farm.
@@ -50,7 +50,7 @@
                                 I used the Handlebars.js templating engine to render the results from the Sequelize queries to the front-end. The front-end was styled by my teammates using Bootstrap. 
                             </p>
                             <p class="projectTextParagraph">
-                                I'm still working on adding functionality to the website, and plan on donating it to the Ironwood Pig Sanctuary in hopes of supporting the wonderful work they do! Please check out the website demo(administrator password: 'pigministrator').
+                                I'm still working on adding functionality to the website, and we plan on donating it to the Ironwood Pig Sanctuary in hopes of supporting the wonderful work they do! Please check out the website demo(administrator password: 'pigministrator').
                             </p>
                         </div>
                         <!--projectInfo-->
