fixed github repo link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <a target="_blank" class="introAnchor" href="https://docs.google.com/document/d/1ycrzJnVMiDwQldcQyCWfwtbGAX9ZLrThZllu56x6pKc/edit?usp=sharing"><i title="Resume" class="fa fa-file-o"></i></a>
                         
                         <br>
-                        <i id = "introDownArrow" class = "fa fa-arrow-circle-down" title = "Projects"></i>
+                        <!-- <i id = "introDownArrow" class = "fa fa-arrow-circle-down" title = "Projects"></i> -->
                     </div>
                 </div><!--intro-->
            <div id = "projectWrapper">
@@ -122,8 +122,7 @@
                                 <img class = "gallery" src = "img/LIRI.png" value = "img/LIRI.png">
                             </div>
                             <div class = "galleryChoiceWrap">
-                                <div class = "galleryAnchorWrap">
-                                    <a target = "_blank" href = "https://github.com/rsavajiyani/liri"><button class = "galleryAnchorButton">GitHub</button></a>
+                                <div class = "galleryAnchorWrap"><a target="_blank" href="https://github.com/rsavajiyani/liri-node-app"><button class="galleryAnchorButton">GitHub</button></a>
                                 </div>
                             </div>
                         </div><!--projectImage-->
