--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <div id = "introWrap">
                         <h1 id = "introName">Ravi Savajiyani</h1>
                         <h3 id = "introInfo">Full Stack Web Developer</h3>
+                        <h5 id = "introInfo">I am a full-stack web developer and medical school graduate who hopes to work at the intersection of healthcare and technology.</h4>
 
                         <a target = "_blank" class = "introAnchor" href = "https://github.com/rsavajiyani"><i title = "GitHub" class = "fa fa-github main_icon"></i></a>
                         <a target="_blank" class="introAnchor" href="https://www.linkedin.com/in/rsavajiyani/"><i title="LinkedIn" class="fa fa-linkedin-square"></i></a>
@@ -32,7 +33,11 @@
                         <!-- <i id = "introDownArrow" class = "fa fa-arrow-circle-down" title = "Projects"></i> -->
                     </div>
                 </div><!--intro-->
+
+    
+
            <div id = "projectWrapper">
+               
                 <h1 class = "projectTitle">Projects</h1>
                 <div class="project container">
                     <div class="row">
