--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="css/skeleton.css" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
-    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 
 </head>
 
@@ -28,15 +28,9 @@
                 <h5 id="introInfo">I am a full-stack web developer and medical school graduate who hopes to work at the intersection of healthcare
                     and technology.</h4>
 
-                    <a target="_blank" class="introAnchor" href="https://github.com/rsavajiyani">
-                        <i title="GitHub" class="fa fa-github main_icon"></i>
-                    </a>
-                    <a target="_blank" class="introAnchor" href="https://www.linkedin.com/in/rsavajiyani/">
-                        <i title="LinkedIn" class="fa fa-linkedin-square"></i>
-                    </a>
-                    <a target="_blank" class="introAnchor" href="https://docs.google.com/document/d/1ycrzJnVMiDwQldcQyCWfwtbGAX9ZLrThZllu56x6pKc/edit?usp=sharing">
-                        <i title="Resume" class="fa fa-file-o"></i>
-                    </a>
+                    <a target="_blank" class="introAnchor" href="https://github.com/rsavajiyani"><i title="GitHub" class="fa fa-github main_icon"></i></a>
+                    <a target="_blank" class="introAnchor" href="https://www.linkedin.com/in/rsavajiyani/"><i title="LinkedIn" class="fa fa-linkedin-square"></i></a>
+                    <a target="_blank" class="introAnchor" href="https://docs.google.com/document/d/1ycrzJnVMiDwQldcQyCWfwtbGAX9ZLrThZllu56x6pKc/edit?usp=sharing"><i title="Resume" class="fa fa-file-o"></i></a>
 
                     <br>
                     <!-- <i id = "introDownArrow" class = "fa fa-arrow-circle-down" title = "Projects"></i> -->
