updated resume link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
                     <a target="_blank" class="introAnchor" href="https://github.com/rsavajiyani"><i title="GitHub" class="fa fa-github main_icon"></i></a>
                     <a target="_blank" class="introAnchor" href="https://www.linkedin.com/in/rsavajiyani/"><i title="LinkedIn" class="fa fa-linkedin-square"></i></a>
-                    <a target="_blank" class="introAnchor" href="https://docs.google.com/document/d/1ycrzJnVMiDwQldcQyCWfwtbGAX9ZLrThZllu56x6pKc/edit?usp=sharing"><i title="Resume" class="fa fa-file-o"></i></a>
+<a target="_blank" class="introAnchor" href="https://drive.google.com/file/d/1hAaNaW8IEeRKcQQ7AfeXrlG7aMkj9MUy/view?usp=sharing"><i title="Resume" class="fa fa-file-o"></i></a>
 
                     <br>
                     <!-- <i id = "introDownArrow" class = "fa fa-arrow-circle-down" title = "Projects"></i> -->
