fixed footer icons

--- a/index.html
+++ b/index.html
@@ -265,15 +265,9 @@
     <!--wrapper-->
 
     <footer>
-        <a target="_blank" class="introAnchor" href="https://github.com/rsavajiyani">
-            <i title="GitHub" class="fa fa-github main_icon"></i>
-        </a>
-        <a target="_blank" class="introAnchor" href="https://www.linkedin.com/in/rsavajiyani/">
-            <i title="LinkedIn" class="fa fa-linkedin-square"></i>
-        </a>
-        <a class="introAnchor" href="mailto:rsavaj@gmail.com">
-            <i title="Contact Me" class="fa fa-envelope main_icon"></i>
-        </a>
+        <a target="_blank" class="introAnchor" href="https://github.com/rsavajiyani"><i title="GitHub" class="fa fa-github main_icon"></i></a>
+        <a target="_blank" class="introAnchor" href="https://www.linkedin.com/in/rsavajiyani/"><i title="LinkedIn" class="fa fa-linkedin-square"></i></a>
+        <a class="introAnchor" href="mailto:rsavaj@gmail.com"><i title="Contact Me" class="fa fa-envelope main_icon"></i></a>
     </footer>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>
