--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div id="introWrap">
                 <h1 id="introName">Ravi Savajiyani</h1>
                 <h3 id="introInfo">Full Stack Web Developer</h3>
-                <h5 id="introInfo">I am a full-stack web developer with a background in medicine who hopes to work at the intersection of healthcare and technology.</h4>
+                <h5 id="introInfo">I am a full-stack software engineer with a background in medicine who hopes to work at the intersection of healthcare and technology.</h4>
 
                     <a target="_blank" class="introAnchor" href="https://github.com/rsavajiyani"><i title="GitHub" class="fa fa-github main_icon"></i></a>
                     <a target="_blank" class="introAnchor" href="https://www.linkedin.com/in/rsavajiyani/"><i title="LinkedIn" class="fa fa-linkedin-square"></i></a>
